[package]
name = "leveldb-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "leveldb"
path = "src/lib.rs"


[dependencies]
rand = "0.8.5"
crc32c = "0.6.8"
log = "0.4.22"
log4rs = "1.3.0"
fslock = "0.2.1"
parking_lot = "0.12.3"
crossbeam-channel = "0.5.13"
typed-arena = "2.0.2"

[dev-dependencies]
tempfile = "3.20.0"
assert_fs = "1.1.2"
